bk_ida/gccida/g0/make_memloc
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_memloc/src/reload.c:4993:32: error: use of undeclared identifier 'machine_mode'
tema = adjust_address_1( v2, ( machine_mode)*( ( unsigned __int8 *)ad + 2), 0LL, 0, 1); 
                               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_memloc/src/obj/reload.o] Error 1
